# python-project-lvl2

./: .gitignore  Makefile  README.md  file1.yaml  pyproject.toml  setup.cfg
.github/workflows/: linter_test.yml
gendiff/: __init__.py  formaters.py  gendiff_m.py
gendiff/scripts/: gendiff_s.py
gendiff_root/: __init__.py  gendiff.py
gendiff_root/scripts/: gendiff.py
generate_diff/modules/: formaters.py  gendiff.py
generate_diff/scripts/: gendiff.py
generate_diff/tests/: test_gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file2.json  r_file1.yaml  r_file2.yml  right_answer.py
