[tool.poetry]
name = "python_lvl2"
version = "0.1.0"
description = "Generate diff"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "generate_diff" },]


[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
gendiff = "generate_diff.scripts.gendiff:main"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
