[tool.poetry]
name = "hexlet-code-at-shiffter"
version = "0.1.0"
description = "Generate diff"
authors = ["shifter <vanfre93@gmail.com.com>"]
packages = [{ include = "gendiff" },]


[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^3.0.0"
PyYAML = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_s:main"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
